--- a/assets/base.css
+++ b/assets/base.css
@@ -160,6 +160,7 @@ a {
     height: 60px;
     vertical-align: middle;
     background-color: #ed4242;
+    color: #fff;
     margin-top: 0;
     margin-bottom: 0;
     -webkit-transition: 0.3s;
@@ -167,6 +168,10 @@ a {
     -ms-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
+}
+
+#nav .logo:hover {
+    color: #fff;
 }
 
 #nav.fixed .logo {
@@ -890,8 +895,7 @@ ol.type-toc,
     animation: highlight 1.6s ease;
 }
 
-
-
+/* 修复顶部带有Fixed导航锚点定位不准确问题 */
 h2, h3, h4, h5, h6 {
     padding-left: 1em;
     position: relative;
@@ -900,8 +904,7 @@ h2, h3, h4, h5, h6 {
     -moz-background-clip:padding;
     background-clip:padding-box;
     border-top: 80px solid transparent;
-    margin-top: -80px;
-    
+    margin-top: -80px;  
 }
 
 /* 防止标题上边距导致 */
@@ -1111,6 +1114,7 @@ h5:hover .anchor-link {
 .body-night .type pre,
 .body-night .type code {
     background-color: #3F3F3F;
+    border-color: #555;
 }
 
 /* 多说评论框 */
@@ -1130,47 +1134,4 @@ h5:hover .anchor-link {
 
 .body-night #ds-thread a:hover {
     color: #fff !important;
-}
-
-/* ==========================================================================
-   代码示例
-   ========================================================================== */
-
-.type-demo {
-    padding: 45px 16px 16px;
-    margin-top: 16px;
-    position: relative;
-    border: 1px solid #ddd;
-    margin-bottom: -1px;
-    border-radius: 3px 3px 0 0; 
-}
-
-.type-demo:after {
-    content: "演示";
-    position: absolute;
-    top: 12px;
-    left: 16px;
-    font-size: 14px;
-    color: #BBB;
-    letter-spacing: 1px;
-}
-
-.type-demo .well {
-    padding: 16px;
-    background-color: #F5F5F5;
-    border: 1px solid #E3E3E3;
-    border-radius: 6px;
-}
-
-.type-demo + .highlight pre {
-    border-radius: 0 0 3px 3px;
-}
-
-.type-demo a + a {
-    margin: 0;
-}
-
-.type-demo .btn {
-    margin-top: 6px;
-    margin-bottom: 6px;
 }
