--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ script: assets/post.js
   </div>
   <div id="nav" class="clearfix">
     <a href="javascript:void(0)" class="toggler" id="J_toggler">
-      <i class="iconfont">&#271;</i> 导航
+      <i class="iconfont">&#271;</i><span class="label">导航</span>
     </a>
     <a href="{{ site.baseurl }}/" class="logo dib-box"><i class="iconlogo mi-cube dib"></i><span class="logo-text dib">Cube</span></a>
     <ul class="menu">
