--- a/src/type.css
+++ b/src/type.css
@@ -539,7 +539,7 @@ ol.type-toc,
 .type-toc ol {
     counter-reset: list;/* 1 */
     list-style-type: none !important; /* 2 */
-    *list-style-type: type-toc !important;
+    *list-style-type: decimal !important;
 }
 
 .type-toc li:before {
@@ -587,6 +587,34 @@ ol.type-toc,
     margin-top: 0;
     margin-bottom: 8px;
 } 
+
+/* --------------------------------------------------------------------------
+   内容倒序的列表
+   -------------------------------------------------------------------------- */
+/**
+ * 结构必须是：
+<ol class="type-reversed" reversed>
+  <li>...</li>
+  ...
+</ol>
+ */
+
+ol.type-reversed {
+    display: -webkit-box; /* Chrome 4+, Safari 3.1, iOS Safari 3.2+ */
+    display: -moz-box; /* Firefox 17- */
+    display: -webkit-flex; /* Chrome 21+, Safari 6.1+, iOS Safari 7+, Opera 15/16 */
+    display: -moz-flex; /* Firefox 18+ */
+    display: -ms-flex; /* IE 10 */
+    display: flex; /* Chrome 29+, Firefox 22+, IE 11+, Opera 12.1/17/18, Android 4.4+ */
+
+    -webkit-box-direction: reverse;
+    -moz-box-direction: reverse;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    -webkit-flex-direction: column-reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+}
 
 
 /* ==========================================================================
