--- a/_includes/ceiling.html
+++ b/_includes/ceiling.html
@@ -16,7 +16,7 @@
         <i class="iconlogo mi-crox"></i>
         <span class="name">Crox</span>
       </a>
-      <a href="/rap">
+      <a href="/RAP">
         <i class="iconlogo mi-rap"></i>
         <span class="name">RAP</span>
       </a>
