--- a/src/type.css
+++ b/src/type.css
@@ -302,6 +302,7 @@ h6 {
     border-radius: 3px;
     word-break: break-all;
     word-wrap: break-word;
+    -webkit-overflow-scrolling: touch;
 }
 
 /**
