资源文件路径改成当前目录

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
 {% include meta.html %}
   <title>{% if page.title %}{{ page.title }} - {% endif %} Cube 样式解决方案 - THX</title>
-  <link rel="stylesheet" type="text/css" href="./src/neat.css">
-  <link rel="stylesheet" type="text/css" href="./src/layout.css">
-  <link rel="stylesheet" type="text/css" href="./src/utils.css">
-  <link rel="stylesheet" type="text/css" href="./src/iconfont.css">
-  <link rel="stylesheet" type="text/css" href="./src/button.css">
-  <link rel="stylesheet" type="text/css" href="./src/type.css">
-  <link rel="stylesheet" type="text/css" href="./assets/syntax/github.css">
-  <link rel="stylesheet" type="text/css" href="./assets/base.css">
-  <link rel="stylesheet" type="text/css" href="./assets/style.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/neat.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/layout.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/utils.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/iconfont.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/button.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/type.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/github.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/base.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
 </head>
 <body bx-app class="skin-cube">
   {{ content }}
