--- a/assets/base.css
+++ b/assets/base.css
@@ -912,7 +912,6 @@ ol.type-toc,
 .type h4,
 .type h5,
 .type h6 {
-    padding-left: 1em;
     position: relative;
 /*    -webkit-background-clip:padding-box;
     -moz-background-clip:padding;
@@ -958,9 +957,9 @@ ol.type-toc,
 .anchor-link {
     visibility: hidden;
     position: absolute;
-    left: -.5em;
+    left: -1.4em;
     padding-left: .5em;
-    top: -3px;
+    top: 0px;
     z-index: 9;
     width: 2em;
     /*text-indent: .5em;*/
