--- a/_includes/duoshuo.html
+++ b/_includes/duoshuo.html
@@ -1,4 +1,4 @@
 <!-- Duoshuo Comment BEGIN -->
 {% capture thread_key %}{{ site.baseurl }}{% if page.id %}{{ page.id }}/{% else %}{{ page.url | replace_first: 'index.html' }}{% endif %}{% endcapture %}
-<div class="ds-thread" data-thread-key="{{ thread_key }}" data-url="http://thx.alibaba-inc.com{{ thread_key }}" data-limit="10"></div>
+<div class="ds-thread" data-thread-key="{{ thread_key }}" data-url="http://thx.github.io{{ thread_key }}" data-limit="10"></div>
 <!-- Duoshuo Comment END -->
