--- a/_includes/cubeUsage.html
+++ b/_includes/cubeUsage.html
@@ -1,3 +1,11 @@
+http 版本：
+
 ```html
-<link rel="stylesheet" type="text/css" href="http://g.tbcdn.cn/thx/cube/{{site.version}}/cube-min.css">
+<link rel="stylesheet" type="text/css" href="http://g.alicdn.com/thx/cube/{{site.version}}/cube-min.css">
+```
+
+https 版本：
+
+```html
+<link rel="stylesheet" type="text/css" href="https://g.alicdn.com/{{site.version}}/cube-https-min.css">
 ```
