--- a/_includes/cubeBuild.html
+++ b/_includes/cubeBuild.html
@@ -16,15 +16,15 @@ http CDN 地址：
 https CDN 地址：
 <ul>
   <li>
-    <a href="http://g.alicdn.com/thx/cube/{{ site.version }}/cube-https.css">
+    <a href="https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https.css">
       <i class="iconfont">&#523;</i> cube.css
     </a>
-    <code>http://g.alicdn.com/thx/cube/{{ site.version }}/cube.css</code></li>
+    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube.css</code></li>
   <li>
-    <a href="http://g.alicdn.com/thx/cube/{{ site.version }}/cube-https-min.css">
+    <a href="https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https-min.css">
       <i class="iconfont">&#295;</i> cube.css 压缩版
     </a>
-    <code>http://g.alicdn.com/thx/cube/{{ site.version }}/cube-min.css</code>
+    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube-min.css</code>
   </li>
 </ul>
 
