--- a/_includes/cubeBuild.html
+++ b/_includes/cubeBuild.html
@@ -21,12 +21,12 @@ https CDN 地址：
     <a href="https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https.css">
       <i class="iconfont">&#523;</i> cube.css
     </a>
-    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube.css</code></li>
+    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https.css</code></li>
   <li>
     <a href="https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https-min.css">
       <i class="iconfont">&#295;</i> cube.css 压缩版
     </a>
-    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube-min.css</code>
+    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube-min-https.css</code>
   </li>
 </ul>
 
