--- a/_includes/cubeUsage.html
+++ b/_includes/cubeUsage.html
@@ -1,11 +1,9 @@
-http 版本：
-
+* http 版本：
 ```html
 <link rel="stylesheet" href="http://g.alicdn.com/thx/cube/{{site.version}}/cube-min.css">
 ```
 
-https 版本：
-
+* https 版本：
 ```html
 <link rel="stylesheet" href="https://g.alicdn.com/{{site.version}}/cube-https-min.css">
 ```
