--- a/_includes/cubeBuild.html
+++ b/_includes/cubeBuild.html
@@ -26,7 +26,7 @@ https CDN 地址：
     <a href="https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https-min.css">
       <i class="iconfont">&#295;</i> cube.css 压缩版
     </a>
-    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube-min-https.css</code>
+    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https-min.css</code>
   </li>
 </ul>
 
