--- a/_includes/cubeUsage.html
+++ b/_includes/cubeUsage.html
@@ -7,5 +7,5 @@
 * https 版本：
 
 ```html
-<link rel="stylesheet" href="https://g.alicdn.com/{{site.version}}/cube-https-min.css">
+<link rel="stylesheet" href="https://g.alicdn.com/thx/cube/{{site.version}}/cube-https-min.css">
 ```
