--- a/_includes/cubeBuild.html
+++ b/_includes/cubeBuild.html
@@ -1,32 +1,15 @@
-http CDN 地址：
-
 <ul>
   <li>
-    <a href="http://g.alicdn.com/thx/cube/{{ site.version }}/cube.css">
+    <a href="//g.alicdn.com/thx/cube/{{ site.version }}/cube.css">
       <i class="iconfont">&#523;</i> cube.css
     </a>
-    <code>http://g.alicdn.com/thx/cube/{{ site.version }}/cube.css</code></li>
+    <code>//g.alicdn.com/thx/cube/{{ site.version }}/cube.css</code></li>
   <li>
-    <a href="http://g.alicdn.com/thx/cube/{{ site.version }}/cube-min.css">
+    <a href="//g.alicdn.com/thx/cube/{{ site.version }}/cube-min.css">
       <i class="iconfont">&#295;</i> cube.css 压缩版
     </a>
-    <code>http://g.alicdn.com/thx/cube/{{ site.version }}/cube-min.css</code>
+    <code>//g.alicdn.com/thx/cube/{{ site.version }}/cube-min.css</code>
   </li>
 </ul>
 
-https CDN 地址：
-
-<ul>
-  <li>
-    <a href="https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https.css">
-      <i class="iconfont">&#523;</i> cube.css
-    </a>
-    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https.css</code></li>
-  <li>
-    <a href="https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https-min.css">
-      <i class="iconfont">&#295;</i> cube.css 压缩版
-    </a>
-    <code>https://g.alicdn.com/thx/cube/{{ site.version }}/cube-https-min.css</code>
-  </li>
-</ul>
 
