--- a/_includes/cubeModules.html
+++ b/_includes/cubeModules.html
@@ -7,10 +7,6 @@
     <span class="name">Layout</span>
     <span class="caption">更加丰富的布局</span>
   </a>
-  <a class="dib" href="{{ site.baseurl }}/doc/iconfont"><i class="iconfont">&#268;</i>
-    <span class="name">Iconfont</span>
-    <span class="caption">海量图标字体</span>
-  </a>
   <a class="dib" href="{{ site.baseurl }}/doc/button"><i class="iconfont">&#353;</i>
     <span class="name">Button</span>
     <span class="caption">自适应按钮</span>
@@ -18,5 +14,9 @@
   <a class="dib" href="{{ site.baseurl }}/doc/type"><i class="iconfont">&#341;</i>
     <span class="name">Type</span>
     <span class="caption">照顾中文的版式设计</span>
+  </a>
+  <a class="dib" target="_blank" href="http://iconfont.cn/"><i class="iconfont">&#268;</i>
+    <span class="name">Iconfont</span>
+    <span class="caption">字体图标平台</span>
   </a>
 </div>
