--- a/_includes/cubeUsage.html
+++ b/_includes/cubeUsage.html
@@ -1,11 +1,5 @@
-* http 版本：
+<p>Cube 托管于强大的阿里 CDN 上，提供 https 支持，只需按如下方式引入便可自适应协议。</p>
 
 ```html
-<link rel="stylesheet" href="http://g.alicdn.com/thx/cube/{{site.version}}/cube-min.css">
-```
-
-* https 版本：
-
-```html
-<link rel="stylesheet" href="https://g.alicdn.com/thx/cube/{{site.version}}/cube-https-min.css">
+<link rel="stylesheet" href="//g.alicdn.com/thx/cube/{{site.version}}/cube-min.css">
 ```
