--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,3 +1,3 @@
-<link rel="stylesheet" type="text/css" href="http://g.tbcdn.cn/thx/cube/1.2.0/??cube.css,type.css">
-<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/github.css">
-<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/base.css">
+<link rel="stylesheet" href="http://g.tbcdn.cn/thx/cube/1.2.3/??cube.css,type.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/syntax/github.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/base.css">
