--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
 {% include meta.html %}
   <title>{% if page.title %}{{ page.title }} - {% endif %} Cube 样式解决方案 - THX</title>
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/neat.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/layout.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/utils.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/iconfont.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/button.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/type.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/github.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/base.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
+  <link rel="stylesheet"  href="{{ site.baseurl }}/src/css/neat.css">
+  <link rel="stylesheet"  href="{{ site.baseurl }}/src/css/layout.css">
+  <link rel="stylesheet"  href="{{ site.baseurl }}/src/css/utils.css">
+  <link rel="stylesheet"  href="{{ site.baseurl }}/src/css/iconfont.css">
+  <link rel="stylesheet"  href="{{ site.baseurl }}/src/css/button.css">
+  <link rel="stylesheet"  href="{{ site.baseurl }}/src/css/type.css">
+  <link rel="stylesheet"  href="{{ site.baseurl }}/assets/syntax/github.css">
+  <link rel="stylesheet"  href="{{ site.baseurl }}/assets/base.css">
+  <link rel="stylesheet"  href="{{ site.baseurl }}/assets/style.css">
 </head>
 <body bx-app class="skin-cube">
   {{ content }}
