压缩后缀改为.min.css

--- a/_includes/cubeUsage.html
+++ b/_includes/cubeUsage.html
@@ -1,5 +1,5 @@
 <p>Cube 托管于强大的阿里 CDN 上，提供 https 支持，只需按如下方式引入便可自适应协议。</p>
 
 ```html
-<link rel="stylesheet" href="//g.alicdn.com/thx/cube/{{site.version}}/cube-min.css">
+<link rel="stylesheet" href="//g.alicdn.com/thx/cube/{{site.version}}/cube.min.css">
 ```
