--- a/_includes/cubeBuild.html
+++ b/_includes/cubeBuild.html
@@ -5,10 +5,10 @@
     </a>
     <code>//g.alicdn.com/thx/cube/{{ site.version }}/cube.css</code></li>
   <li>
-    <a href="//g.alicdn.com/thx/cube/{{ site.version }}/cube-min.css">
+    <a href="//g.alicdn.com/thx/cube/{{ site.version }}/cube.min.css">
       <i class="iconfont">&#295;</i> cube.css 压缩版
     </a>
-    <code>//g.alicdn.com/thx/cube/{{ site.version }}/cube-min.css</code>
+    <code>//g.alicdn.com/thx/cube/{{ site.version }}/cube.min.css</code>
   </li>
 </ul>
 
