--- a/_includes/cubeModules.html
+++ b/_includes/cubeModules.html
@@ -15,7 +15,7 @@
     <span class="name">Type</span>
     <span class="caption">照顾中文的版式设计</span>
   </a>
-  <a class="dib" target="_blank" href="http://iconfont.cn/"><i class="iconfont">&#268;</i>
+  <a class="dib" href="{{ site.baseurl }}/doc/iconfont"><i class="iconfont">&#268;</i>
     <span class="name">Iconfont</span>
     <span class="caption">字体图标平台</span>
   </a>
