--- a/_includes/cubeUsage.html
+++ b/_includes/cubeUsage.html
@@ -3,3 +3,9 @@
 ```html
 <link rel="stylesheet" href="//g.alicdn.com/thx/cube/{{site.version}}/cube.min.css">
 ```
+
+<p>从 1.3.2 版本开始，可以直接使用 NPM 来管理。</p>
+
+```bash
+npm install --save cube.css
+```
