Remove independent version

--- a/src/scss/type.scss
+++ b/src/scss/type.scss
@@ -1,8 +1,8 @@
 /**
-*@ Name:        type.css V1.1.0
+*@ Name:        type.css
 *@ Author:      一丝
-*@ Update:      2013-12-23 9:38:42;
-*@ Copyright:	MIT License
+*@ Update:      2016年08月10日22:04:30
+*@ Copyright:  	MIT License
 */
 body {
   font-size: 14px;
