--- a/src/scss/neat.scss
+++ b/src/scss/neat.scss
@@ -1,9 +1,8 @@
 /**
-* @file:      Neat.css V1.1.1
+* @file:      Neat.css
 * @author:    一丝
-* @update:    2016年08月10日15:08:19
+* @update:    2016年08月10日22:05:05
 * @copyright: 基于 normalize.css | MIT License
-* @doc:
 */
 
 /**
