--- a/src/scss/com/_print.scss
+++ b/src/scss/com/_print.scss
@@ -26,11 +26,11 @@
   }
 
   a[href]:after {
-    content: "("attr(href)")";
+    content: "("attr(href) ")";
   }
 
   abbr[title]:after {
-    content: "("attr(title)")";
+    content: "("attr(title) ")";
   }
 
   /**
@@ -62,7 +62,7 @@
   }
 
   @page {
-    margin: 0.5cm;
+    margin: .5cm;
   }
 
   p,
